--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     },
     "homepage": "https://github.com/LambdaSchool/node-db3-challenge#readme",
     "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "knex": "^0.20.8",
+        "helmet": "^3.21.2",
+        "knex": "^0.20.10",
         "knex-cleaner": "^1.3.0",
         "sqlite3": "^4.1.1"
     },
